# audio-similarity

./: LICENCE  README.md  demo.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
audio_similarity/: __version__.py  audio_similarity.py
notebooks/: demo.ipynb
tests/: test_swass.py
