# setup.cfg
[metadata]
name = audio_similarity
version = attr: audio_similarity.__version__
author = Mark Stent
author_email = mark@markstent.co.za
keywords = audio, similarity, audio similarity, swass, stent

# add a description of your package
description = Audio similarity metrics for audio projects.
long_description = file: README.md
long_description_content_type = text/markdown

# add the url to your repository/homepage and version release
url = https://github.com/markstent/audio-similarity
download_url = https://github.com/markstent/audio-similarity.git

# define your license and license file
license = MIT
license_files = LICENCE

classifiers = 
    # for a full list of classifiers see https://pypi.org/classifiers/
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers      
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
install_requires =
    # list the dependencies required by your package
    numpy >=1.24.2
    matplotlib >= 3.7.1 
    librosa>=0.10.0.post2
    pystoi>=0.3.3

python_requires = >=3.9